--- a/Mobiquity/Base.lproj/Main.storyboard
+++ b/Mobiquity/Base.lproj/Main.storyboard
@@ -57,6 +57,10 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
                                 </variation>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="w1t-R6-ZIL"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="tCj-AX-Quc"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
